# hyp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HYP_VS_CLIPPY.md  Makefile  README.md  ROADMAP.md
crates/hyp/: BUILD_YOUR_OWN_HYP_CLI.md  Cargo.toml  README.md
crates/hyp-checks-generic/: ADD_YOUR_OWN_CHECKER.md  Cargo.toml  README.md
crates/hyp-checks-generic/src/: analyzer.rs  checker.rs  checker_config_macro.rs  cli_helper.rs  config.rs  lib.rs  registry.rs  violation.rs
crates/hyp-checks-generic/src/checkers/: mod.rs
crates/hyp-examples/: ADD_YOUR_OWN_PROBLEM.md  Cargo.toml  clippy.toml
crates/hyp-examples-cli/: Cargo.toml  kani-config.toml
crates/hyp-examples-cli/src/: main.rs
crates/hyp-examples/src/: lib.rs  test_constants.rs
crates/hyp-examples/src/e10_unsafe_code/: e1001_direct_panic.rs  e1002_direct_unwrap_expect.rs  e1003_unsafe_code.rs  e1004_todo_unimplemented.rs  e1004_unsafe_without_comment.rs  e1005_raw_pointer_deref.rs  e1006_unsafe_transmute.rs  e1007_null_pointer_deref.rs  e1008_unsafe_trait_impl.rs  e1009_unsafe_cell_misuse.rs  e1010_mutable_static.rs  e1011_uninitialized_memory.rs  e1012_unsafe_auto_trait.rs  e1013_union_field_access.rs  e1014_raw_pointer_arithmetic.rs  e1015_unwrap_expect_wo_context.rs  e1016_mutex_unwrap.rs  e1017_prohibit_transmute.rs  e1017_todo_unimplemented.rs  e1018_prohibit_transmute.rs  mod.rs
crates/hyp-examples/src/e11_code_surface_complexity/: e1101_high_cyclomatic_complexity.rs  e1102_deep_nested_logic_in_loops.rs  e1103_too_many_params.rs  e1104_overly_large_struct.rs  e1105_boolean_params.rs  e1106_long_function.rs  e1107_deep_nesting.rs  e1108_nested_match.rs  e1109_excessive_chaining.rs  e1110_nested_callbacks.rs  e1111_excessive_tuple_complexity.rs  e1112_magic_numbers.rs  mod.rs
crates/hyp-examples/src/e12_code_pattern_complexity/: e1201_complex_generics.rs  e1202_complex_lifetimes.rs  e1203_complicated_borrowing.rs  e1204_trait_method_ambiguity.rs  e1205_complex_handler.rs  e1206_deeply_nested_generics.rs  e1207_complex_user_generics.rs  e1208_phantom_types.rs  e1209_hrtb.rs  e1210_recursive_types.rs  e1211_trait_object_complexity.rs  e1212_gat_complexity.rs  e1213_const_generic_complexity.rs  e1214_macro_generated.rs  e1215_type_level_programming.rs  e1216_chained_transform.rs  e1217_abba_deadlock.rs  mod.rs
crates/hyp-examples/src/e13_error_handling/: e1301_unhandled_result.rs  e1302_constructor_without_result.rs  e1303_ignored_errors.rs  e1304_unwrap_in_error_path.rs  e1305_non_exhaustive_match.rs  e1306_swallow_errors.rs  e1307_string_errors.rs  e1308_not_using_question_mark.rs  e1309_panic_in_drop.rs  e1310_error_context_loss.rs  mod.rs
crates/hyp-examples/src/e14_type_safety/: e1401_integer_overflow.rs  e1402_division_by_zero.rs  e1403_modulo_by_zero.rs  e1404_narrowing_conversion.rs  e1405_integer_division_rounding.rs  e1406_signed_unsigned_mismatch.rs  e1407_lossy_float_conversion.rs  e1408_unchecked_indexing.rs  e1409_partial_initialization.rs  mod.rs  (+4 more)
crates/hyp/src/: main.rs
(+207 files in other folders)
