[workspace]
resolver = "2"
members = [
    "crates/hyp-examples",
    "crates/hyp-examples-cli",
    "crates/hyp-checks-generic",
    "crates/hyp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hypernetix Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hypernetix/hyp"

[workspace.dependencies]
# Shared dependencies
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
