[package]
name = "hyp-examples-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hyp-examples"
path = "src/main.rs"

[dependencies]
hyp-examples = { path = "../hyp-examples" }
clap = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
