[package]
name = "hyp-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "problem_examples"
path = "src/lib.rs"
doctest = false

[dependencies]
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1"
once_cell = "1.19"

[dev-dependencies]
log = "0.4"
parking_lot = "0.12"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(kani)',
    'cfg(coverage_nightly)',
    'cfg(custom_coverage)',
] }

[features]
parking_lot = []
bytemuck = []
